# Dora-API

./: .dockerignore  .env.example  .envrc.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml  render.yaml
app/: config.py  main.py  routes.py
app/database/: client.py
app/handlers/: dora.py  health.py
app/models/: analyze.py  dora.py
app/services/: gemini.py  prompt_loader.py
app/workers/: __init__.py  celery_app.py
aquifer-pipeline/: .env.example  .gitignore  README.md  pyproject.toml  schema.sql
aquifer-pipeline/reference/: guides.json  versification.json
aquifer-pipeline/scripts/: build_sql.py  build_tables.py  download_sample_data.py  import_all.py  run_sql.py
aquifer-pipeline/tests/: test_download_sample_data.py
docs/: aquifer-api.md  aquifer-integration.md  aquifer-swagger.json  schemas.md
prompts/: dora_prompt.md
tests/: conftest.py  test_analyze_endpoint.py  test_prompt_loader.py
