[project]
name = "aquifer-pipeline"
version = "0.1.0"
description = "Offline downloader + transform that loads Aquifer biblical content into Postgres"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.2",
    "psycopg[binary]>=3.2.4",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
